<resources>
    <string name="app_name">QuickNewsBytes</string>
    <string name="news_feed">News Feed</string>
    <string name="refresh_sources">Refresh Sources</string>
    <string name="main_news_feed">Main News Feed</string>
    <string name="sources">Sources</string>
    <string name="unable_to_load_source">Unable to fetch news from required source.</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="customize_news_feed">Customize News Feed</string>
    <string name="welcome">Welcome</string>
    <string name="next">Next</string>
    <string name="proceed">Proceed</string>
    <string name="welcome_text">With QuickNewsBytes enjoy rich news from 70+ quality sources. Click below to customize your news feed</string>
    <string name="select_minimum_sources">Customize your news feed by selecting sources of your interest. Select a minimum of 3 sources.</string>
    <string name="source_fetch_error">Unable to fetch sources, please check your internet connection.</string>
    <string name="retry">Retry</string>
    <string name="retrying">Retrying</string>
    <string name="minimum_sources">Select at least 3 sources</string>
    <plurals name="hoursAgo">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="daysAgo">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <plurals name="minutesAgo">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <string-array name="left_navigation">
        <item>News Feed</item>
        <item>Customize News Feed</item>
        <item>About</item>
    </string-array>
</resources>